config-root/namespaces/k/jenkins/jenkins-statefulset.yaml
# Source: jenkins/templates/jenkins-controller-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
  namespace: k
  labels:
    "app.kubernetes.io/name": 'jenkins'
    "helm.sh/chart": "jenkins-4.5.0"
    "app.kubernetes.io/managed-by": "Helm"
    "app.kubernetes.io/instance": "jenkins"
    "app.kubernetes.io/component": "jenkins-controller"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jenkins'
spec:
  serviceName: jenkins
  replicas: 1
  selector:
    matchLabels:
      "app.kubernetes.io/component": "jenkins-controller"
      "app.kubernetes.io/instance": "jenkins"
  template:
    metadata:
      labels:
        "app.kubernetes.io/name": 'jenkins'
        "app.kubernetes.io/managed-by": "Helm"
        "app.kubernetes.io/instance": "jenkins"
        "app.kubernetes.io/component": "jenkins-controller"
      annotations:
        checksum/config: b74c4c32690ae9af27df97fb15b272c90b36921bceda654f4b9d44a3ff3d05ec
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
        runAsNonRoot: true
      serviceAccountName: "jenkins"
      containers:
      - name: jenkins
        image: "jenkins/jenkins:2.401.3-jdk11"
        imagePullPolicy: "Always"
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsUser: 1000
        args: ["--httpPort=8080"]
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50000
          name: agent-listener
        startupProbe:
          failureThreshold: 12
          httpGet:
            path: '/login'
            port: http
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: '/login'
            port: http
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: '/login'
            port: http
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 2000m
            memory: 4096Mi
          requests:
            cpu: 50m
            memory: 256Mi
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home
          readOnly: false
        - mountPath: /var/jenkins_config
          name: jenkins-config
          readOnly: true
        - mountPath: /usr/share/jenkins/ref/plugins/
          name: plugin-dir
          readOnly: false
        - name: sc-config-volume
          mountPath: /var/jenkins_home/casc_configs
        - name: jenkins-secrets
          mountPath: /run/secrets/additional
          readOnly: true
        - name: jenkins-cache
          mountPath: /var/jenkins_cache
        - mountPath: /tmp
          name: tmp-volume
      - name: config-reload
        image: "kiwigrid/k8s-sidecar:1.24.4"
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        resources: {}
        volumeMounts:
        - name: sc-config-volume
          mountPath: "/var/jenkins_home/casc_configs"
        - name: jenkins-home
          mountPath: /var/jenkins_home
      volumes:
      - name: plugins
        emptyDir: {}
      - name: jenkins-config
        configMap:
          name: jenkins
      - name: plugin-dir
        emptyDir: {}
      - name: jenkins-secrets
        projected:
          sources:
          - secret:
              name: jenkins
              items:
              - key: jenkins-admin-user
                path: chart-admin-username
              - key: jenkins-admin-password
                path: chart-admin-password
      - name: jenkins-cache
        emptyDir: {}
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins
      - name: sc-config-volume
        emptyDir: {}
      - name: tmp-volume
        emptyDir: {}
